      during an update, a warning message is printed.
    * Command line configuration, such as --config 
      'buildLabel conary.rpath.com@rpl:devel', now overrides context 
      configuration.

  o Server Changes:
    * The repository server now retries a request as an anonymous user
      if the provided user authentication information does not allow
      a client request to succeed.

  o Build Changes:
    * It is now possible for a recipe to request that specific
      individual requirements be removed from files using the
      exceptDeps keyword argument to r.Requires().  Previously
      you had to accept all the dependencies generated by r.Requires()
      or none of them.
    * r.Replace() now takes a lines=<regexp> argument, to match a line based
      on a regexp.
    * The EnforceJavaBuildRequirements policy has been added.  When
      you are packaging precompiled Java software where you have
      .class/.jar files but no .java files, you can use "del
      EnforceJavaBuildRequirements" to prevent this from policy from
      generating false positives.
    * The EnforceCILBuildRequirements policy has been added.
    * Enforce*BuildRequirements now warn when a package has requirements
      which they don't fulfill themselves and which are not fulfilled by
      the system database.  (for example, soname dependencies from linking
      against libraries that are not managed by Conary on the system.)
    * Automated Perl dependencies have been added, for both provides
      and requires.  They are not yet enforced, in order to give time
      to adapt while perl packages are being re-built.
    * The EnforcePerlBuildRequirements policy has been added.
      Failures found by this policy may be caused by packages on the
      system not having been rebuilt yet with Perl dependencies, but
      could also show bugs in the Perl dependency code.
    * Automated Python dependencies have been added, for both provides