@@ -22,6 +22,10 @@ Changes in 0.80.2:
     * The repository server now retries a request as an anonymous user
       if the provided user authentication information does not allow
       a client request to succeed.
+    * When using "server.py --add-user" to add a user to a repository
+      server, the user will only be given admin privileges if --admin
+      is added to the command line.  Previously, all users added with
+      server.py had admin privileges.
 
   o Build Changes:
     * It is now possible for a recipe to request that specific
